# frh-multi

./: .gitignore  01_START_HERE.ipynb  03_concept_vs_word_frames_relationship.ipynb  05_guided_generation_samples.ipynb  12_multiconcept_guided_generation.ipynb  13_wordnet_lemma_exploration.ipynb  14_golden_reference.ipynb  15_e0_pair_selection.ipynb  16_e0_pilot.ipynb  17_e0_pilot_v2.ipynb  18_e2_riemannian.ipynb  19_e2b_rho_crossover.ipynb  CLAUDE.md  MULTICONCEPT_GUIDE.md  README.md  RESEARCH_PLAN.md  models.yaml  pyproject.toml
frames/evaluation/: harness.py
frames/linalg/: __init__.py  frame.py  stiefel.py
frames/nlp/: datasets.py  synsets.py
frames/representations/: aggregators.py  concept.py  frame.py  schedulers.py
plans/: multiconcept-cgd-findings.md  multiconcept-cgd-implementation-plan.md  multiconcept-cgd-summary.md
playground/: step02_unified_loop.ipynb  step02b_beam_search.ipynb  step03_concept_pairs.ipynb  step04_aggregators.ipynb  step05_frame_composition.ipynb  step06_schedulers.ipynb  step07_eval_harness.ipynb  step10_riemannian_mean.ipynb
resources/: 12_all_probes.pkl  12_all_probes_with_subspace.pkl  12_cascade_probe.pkl  12_combined_probe.pkl  12_multi_probe.pkl  15_e0_selected_pairs.json  16_e0_pilot.jsonl  16_e0_summary.csv  17_e0_pilot_v2.jsonl  17_e0_summary_v2.csv  18_e2_riemannian.jsonl  18_e2_summary.csv  19_e2b_crossover.jsonl  19_e2b_summary.csv
tests/: test_aggregators.py  test_beam.py  test_composition.py  test_golden.py  test_harness.py  test_rho.py  test_schedulers.py  test_stiefel.py
tests/golden/: single_concept.json
